# composable-sdr

./: .ghcid  .gitignore  AppRun  LICENSE  README.md  composable-sdr.cabal  stack.yaml
.github/workflows/: build.yml
apps/: Cabal2AppImage.hs  HeliDecode.hs  SoapySDR.hs
resources/: soapy-sdr.uxf
src/: Cabal2AppImage.hs  ComposableSDR.chs  ComposableSDR.hs  SoapySDR.hs  SoapySDRRec.hs
src/ComposableSDR/: Common.hs  Liquid.chs  Sink.hs  Source.chs  Trans.hs  Types.hs
