cabal-version:       2.4

name:                composable-sdr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mryndzionek/composable-sdr
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mariusz Ryndzionek
maintainer:          mryndzionek@gmail.com
copyright:           2020 Ryndzionek Mariusz
category:            Control, Concurrency, Streaming, Reactivity, Hardware
extra-source-files:  README.md

library
  exposed-modules:     ComposableSDR
  build-depends:       base ^>=4.12, bytestring, mtl,
                       streamly, fusion-plugin,
                       hsndfile, exceptions, storable-tuple
  hs-source-dirs:      src
  include-dirs:        src
  build-tool-depends:  c2hs:c2hs
  ghc-options:         -Wall -O2
                       -fdicts-strict
                       -fmax-worker-args=16
                       -fspec-constr-recursive=16
                       -fplugin=Fusion.Plugin
  default-language:    Haskell2010
  extra-lib-dirs:      /usr/local/lib
  extra-libraries:     SoapySDR, liquid
  default-extensions:  OverloadedStrings, ScopedTypeVariables, FlexibleContexts

executable soapy-sdr
  main-is:             SoapySDR.hs
  build-depends:       base ^>=4.12, binary, directory,
                       containers, optparse-applicative,
                       streamly, fusion-plugin,
                       composable-sdr
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
                       -fdicts-strict
                       -fmax-worker-args=16
                       -fspec-constr-recursive=16
                       -fplugin=Fusion.Plugin
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables, FlexibleContexts

executable cabal2appimage
  main-is:             Cabal2AppImage.hs
  build-depends:       base ^>=4.12, directory, process, monad-extras,
                       containers, optparse-applicative, text, listsafe,
                       filepath
  hs-source-dirs:      src
  ghc-options:         -Wall -g -O0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables, FlexibleContexts
